# test-commit-repository

./: .gitignore  CLAUDE.md  OPENTRACE_GUIDE.md  PROGRESS.md  README.md  data_flow_visualization.txt  demo_new_session.py  demo_prov_analysis.py  feasibility-report.md  implementation-guide.md  opentrace_cli.py  pyproject.toml  research-summary.md  test_basic.py  test_processing.py  test_prov_dag.py  test_question.py  test_vast_analysis.py  test_viz.txt
.claude/agents/: opentrace-validator.md
.claude/workflows/: trace-analysis-guide.md  trace-analysis.yaml
.opentrace/: current_session_id.txt
.opentrace/protected_test/: .integrity.json  prov_dag.json  prov_edges.json  prov_nodes.json
.opentrace/session_20260616_164331/: meta.json  step_000.json
.opentrace/session_20260616_164415/: meta.json  step_000.json  working_data.csv
.opentrace/session_20260616_164436/: meta.json  prov_dag.json  prov_edges.json  prov_nodes.json  step_000.json
.opentrace/session_20260617_153829/: data_flow.txt  final_report.json  meta.json  prov_dag.json  prov_edges.json  prov_nodes.json  step1_stats.json  step2_saidit_posts.json  step_000.json  (+6 more)
VAST_Challenge_2026_MC1/: background.txt  generate_mc1_viz.py  mc1_analysis.py  mc1_prov_viz.txt  prov_viz.txt
VAST_Challenge_2026_MC2/: generate_mc2_viz.py
docs/: agent-prompt-template.md  data-lineage-system.md  implementation-design.md  mcp-tools-guide.md  mcp-tools-reference.md  opentrace-development-session-context.md
opentrace/: __init__.py  mcp_server.py  prov_dag.py  prov_validation.py  prov_visualizer.py  step_details.py  tracker.py
(+254 files in other folders)
